# heron_simulator

./: README.md
.github/workflows/: ci.yml
heron_gazebo/: CMakeLists.txt  package.xml
heron_gazebo/launch/: heron_wildlife.launch  spawn_heron.launch
heron_gazebo/scripts/: cmd_drive_translate
heron_gazebo/worlds/: wildlife_task.world.xacro
